Revert "create jewelry store api"
This reverts commit d444b25a3b9bbac16c2465f1e26d6fd352492864.
