# backend/routes/index.js
@@ -1,11 +1,10 @@
 const router = require('express').Router();
 
 router.get('/', (req, res) => {
-  res.send('Welcome to the Jewelry store');
+  res.send('Welcome to the API.');
 });
 
 router.use('/api-docs', require('./swagger'));
-router.use('/jewelry', require('./jewelry'));
-router.use('/stones', require('./stones'));
+router.use('/professional', require('./professional'));
 
 module.exports = router;
